<resources>
    <string name="app_name" translatable="false">MuseMad</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="SubtituloLogin">Log in or enter as a guest to discover the museums of Madrid:</string>
    <string name="SubtituloRegister">Register or enter as a guest to discover the museums of Madrid:</string>
    <string name="Email">E-mail</string>
    <string name="Passw">Password</string>
    <string name="cPassw">Confirm password</string>
    <string name="cLogin">Log in</string>
    <string name="Guest">Guest</string>
    <string name="eRegist">Register here</string>
    <string name="cRegist">Register</string>
    <string name="descPrado">El Prado es famoso por su impresionante colección de pinturas españolas. Puedes admirar obras de artistas como Diego Velázquez, Francisco de Goya, El Greco y Bartolomé Esteban Murillo.</string>
    <string name="descReinaSofia">El Museo Nacional Centro de Arte Reina Sofía es uno de los principales museos de arte contemporáneo de Madrid. Alberga obras maestras como el famoso cuadro "Guernica" de Pablo Picasso, junto con una amplia colección de arte moderno y contemporáneo.</string>
    <string name="descThyssen">El Museo Thyssen-Bornemisza exhibe una vasta colección de arte que abarca desde el Renacimiento hasta el siglo XX. Aquí podrás disfrutar de obras de artistas como Rembrandt, Van Gogh, Monet y Picasso, entre otros.</string>
    <string name="descArqueologico">El Museo Arqueológico Nacional ofrece una fascinante visión de la historia de España y otras civilizaciones a través de sus exhibiciones de artefactos arqueológicos, incluyendo piezas prehistóricas, romanas, griegas y visigodas.</string>
    <string name="descSorolla">El Museo Sorolla está dedicado al pintor español Joaquín Sorolla. Aquí podrás apreciar una amplia selección de sus obras, incluyendo sus famosos paisajes, retratos y escenas de playa.</string>
    <string name="descHistoriaMadrid">El Museo de Historia de Madrid te invita a explorar la historia de la ciudad desde la antigüedad hasta la actualidad, a través de artefactos, documentos y obras de arte que muestran la evolución de la capital española.</string>
    <string name="descAmerica">El Museo de América exhibe una extensa colección de arte y artefactos provenientes de las culturas precolombinas de América, así como de la época colonial y contemporánea. Es una ventana fascinante a la historia y la diversidad cultural del continente.</string>
    <string name="descAntropologia">El Museo Nacional de Antropología ofrece una visión global de las culturas del mundo, con una amplia colección de artefactos etnográficos y antropológicos que muestran la diversidad de tradiciones y costumbres de diferentes pueblos y civilizaciones.</string>
    <string name="descCerralbo">El Museo Cerralbo es una mansión del siglo XIX que alberga la colección privada de arte y antigüedades del Marqués de Cerralbo. Aquí podrás admirar muebles, pinturas, esculturas y objetos decorativos que ofrecen una visión del arte y la vida cotidiana de la época.</string>
    <string name="descNaval">El Museo Naval de Madrid es un espacio dedicado a la historia de la marina española, con una amplia colección de modelos de barcos, cartografía, uniformes y artefactos relacionados con la navegación y la guerra naval.</string>
    <string name="descCienciasNaturales">El Museo de Ciencias Naturales de Madrid te invita a explorar la biodiversidad del planeta a través de sus exposiciones sobre geología, paleontología, zoología y botánica. Aquí podrás descubrir fósiles, minerales, animales disecados y mucho más.</string>
    <string name="descTraje">El Museo del Traje está dedicado a la historia y la evolución de la indumentaria y la moda en España. Con una colección que abarca desde trajes tradicionales hasta diseños contemporáneos, ofrece una mirada fascinante al mundo del vestuario a lo largo del tiempo.</string>
    <string name="descArtesDecorativas">El Museo Nacional de Artes Decorativas exhibe una selección de mobiliario, cerámica, textiles, vidrio y otros objetos decorativos que muestran la evolución del arte y el diseño en España y otros países a lo largo de los siglos.</string>
    <string name="descFerrocarril">El Museo del Ferrocarril te lleva en un viaje a través de la historia del transporte ferroviario en España, con una impresionante colección de locomotoras, vagones, maquetas y objetos relacionados con el ferrocarril.</string>
    <string name="descSanIsidro">El Museo de San Isidro está ubicado en la Casa de San Isidro, un edificio histórico que fue residencia del santo patrón de Madrid. Aquí podrás aprender sobre la historia y la cultura de la ciudad a través de sus exhibiciones sobre arqueología, arte medieval y la vida cotidiana en la época de San Isidro.</string>
    <string name="descABC">El Museo ABC es un espacio dedicado al dibujo y la ilustración, con una amplia colección de obras de artistas españoles e internacionales. Aquí podrás disfrutar de exposiciones temporales y actividades relacionadas con el arte del dibujo y la narrativa gráfica.</string>
    <string name="descLazaroGaldiano">El Museo Lázaro Galdiano alberga la colección privada de arte del empresario José Lázaro Galdiano, que incluye pinturas, esculturas, muebles, objetos decorativos y artes decorativas de diferentes épocas y estilos.</string>
    <string name="descRomanticismo">El Museo Nacional del Romanticismo te invita a viajar al siglo XIX y explorar la vida y el arte de la época romántica en España. Con una colección que incluye pinturas, muebles, vestidos y objetos cotidianos, ofrece una mirada fascinante a este período histórico.</string>
    <string name="descArteRomano">El Museo Nacional de Arte Romano de Mérida es uno de los principales museos arqueológicos de España. Aquí podrás admirar una impresionante colección de artefactos romanos, incluyendo esculturas, mosaicos, inscripciones y objetos cotidianos.</string>
    <string name="descRealAcademia">El Museo de la Real Academia de Bellas Artes de San Fernando exhibe una selección de obras de la colección de la Real Academia, incluyendo pinturas, esculturas y dibujos de artistas españoles e internacionales.</string>
    <string name="descCiudad">El Museo de la Ciudad está ubicado en la antigua Casa de la Villa de Madrid, un edificio histórico que fue sede del ayuntamiento. Aquí podrás aprender sobre la historia y la evolución de la ciudad a través de sus exposiciones sobre urbanismo, arquitectura y vida cotidiana.</string>
    <string name="descAire">El Museo del Aire es un espacio dedicado a la historia de la aviación en España, con una amplia colección de aviones, helicópteros, motores y otros objetos relacionados con la aviación militar y civil.</string>
    <string name="descGeominero">El Museo Geominero te invita a explorar el fascinante mundo de la geología, con una colección de minerales, rocas, fósiles y otros objetos relacionados con las ciencias de la Tierra.</string>
    <string name="descHistoriaArte">El Museo de Historia del Arte de Madrid ofrece una visión completa de la historia del arte occidental, desde la antigüedad hasta la actualidad, a través de sus exposiciones de pinturas, esculturas, dibujos y otros objetos artísticos.</string>
    <string name="descOrigenes">El Museo de los Orígenes, también conocido como Museo de San Isidro, está dedicado a la historia de Madrid desde sus orígenes prehistóricos hasta la actualidad. Con una colección que incluye artefactos arqueológicos, maquetas y reconstrucciones, ofrece una visión fascinante de la evolución de la ciudad a lo largo del tiempo.</string>
    <string name="descReproducciones">El Museo Nacional de Reproducciones Artísticas es un espacio dedicado a la copia de obras maestras de la historia del arte. Aquí podrás admirar reproducciones de famosas pinturas, esculturas y otros objetos artísticos de diferentes épocas y estilos.</string>
    <string name="descTeatro">El Museo Nacional del Teatro ofrece una visión completa de la historia del teatro en España, con una colección que incluye trajes, maquetas, programas, carteles y otros objetos relacionados con el mundo del teatro.</string>
    <string name="descBibliotecaNacional">El Museo de la Biblioteca Nacional de España te invita a explorar la historia del libro y la escritura a través de sus exposiciones de manuscritos, incunables, libros raros y otros objetos relacionados con la bibliofilia y la historia del libro.</string>
    <string name="descFabricaTapices">El Museo de la Real Fábrica de Tapices ofrece una visión fascinante de la historia de la tapicería en España, con una colección de tapices, telares, herramientas y otros objetos relacionados con esta antigua tradición artesanal.</string>
    <string name="descFundacionLazaroGaldiano">El Museo de la Fundación Lázaro Galdiano alberga la colección privada de arte y antigüedades del empresario José Lázaro Galdiano, que incluye pinturas, esculturas, muebles, objetos decorativos y artes decorativas de diferentes épocas y estilos.</string>
    <string name="descEsculturaAireLibre">El Museo de Escultura al Aire Libre de la Castellana es un espacio público dedicado a la escultura contemporánea, con una colección de obras de artistas españoles e internacionales que se exhiben en el Paseo de la Castellana de Madrid.</string>
    <string name="descAcademiaBellasArtes">El Museo de la Academia de Bellas Artes de San Fernando exhibe una selección de obras de la colección de la Real Academia, incluyendo pinturas, esculturas y dibujos de artistas españoles e internacionales.</string>
    <string name="descBomberos">El Museo de los Bomberos está dedicado a la historia y la evolución de los servicios de bomberos en España, con una colección de vehículos, uniformes, herramientas y otros objetos relacionados con la lucha contra el fuego.</string>
    <string name="descFarmaciaHispana">El Museo de la Farmacia Hispana ofrece una visión completa de la historia de la farmacia en España, con una colección de boticas, utensilios, libros y otros objetos relacionados con la práctica farmacéutica a lo largo de los siglos.</string>
    <string name="descRatoncitoPerez">El Museo del Ratoncito Pérez está dedicado al famoso personaje del folclore español. Aquí podrás aprender sobre la historia y las leyendas relacionadas con el Ratoncito Pérez, así como ver una colección de objetos relacionados con él.</string>
    <string name="descCanalesIsabelII">El Museo de los Canales de Isabel II te invita a explorar la historia y la ingeniería de los sistemas de abastecimiento de agua en Madrid, con una colección de maquetas, herramientas, fotografías y otros objetos relacionados con los canales y conducciones de agua.</string>
    <string name="descHistoriaFarmacia">El Museo de la Historia de la Farmacia te lleva en un viaje a través de la historia de la medicina y la farmacia en España, con una colección de utensilios, boticas, libros y otros objetos relacionados con la práctica farmacéutica a lo largo de los siglos.</string>
    <string name="descEvolucionHumana">El Museo de la Evolución Humana te invita a explorar la historia de la humanidad y la evolución biológica a través de sus exposiciones sobre paleontología, antropología y arqueología. Aquí podrás descubrir fósiles, herramientas y otros vestigios de nuestros antepasados.</string>
    <string name="descFundacionTelefonica">El Museo de la Fundación Telefónica ofrece una mirada a la historia de las comunicaciones en España, con una colección de teléfonos, equipos de transmisión, fotografías y otros objetos relacionados con la telefonía y la tecnología de la información.</string>
</resources>